# RAGlet

./: .gitignore  README.md  pyproject.toml
examples/: api.py  calculadora.py
raglet/cli/: main.py
