[tool.poetry]
name = "raglet"
version = "0.1.0"
description = "CLI for codebase analysis via RAG"
authors = ["Seu Nome <email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"  # CLI essentials
openai = "^1.12.0"  # Para embeddings e chat
tiktoken = "^0.5.2"  # Token counting
tree-sitter = "^0.20.1"  # Parsing de código
numpy = "1.26.4"
chromadb = "^0.4.15"  # Vector DB mais simples que FAISS
rich = "^13.7.0"  # Output bonito

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
